correct menu - add z-index for Contact.html 750px

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -165,6 +165,7 @@ menu {
 .menu-items {
   position: absolute;
   top: 49px;
+  z-index: 1;
   list-style-type: none;
   padding: 0;
   margin: 0 26px 0;
