--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -69,7 +69,8 @@ header {
             height: 13px;
             border-color: #fff;
             border-style: solid;
-            border-width: 0 2px 2px 0;transform: translateY(20px) rotate(50grad);
+            border-width: 0 2px 2px 0;
+            transform: translateY(20px) rotate(50grad);
         }
 
         @include breakpoint(751px) {
@@ -238,6 +239,7 @@ menu {
 .menu-items {
     position: absolute;
     top: 49px;
+    z-index: 1;
     list-style-type: none;
     padding: 0;
     margin: 0 26px 0;
